@@ -1,5 +1,11 @@
 2009-11-25  Miguel de Dios <miguel.dedios@artica.es>
 
+	* operation/agentes/status_monitor.php: fix the what interval to check in
+	the monitor.
+	Fixes: 2902446
+
+2009-11-25  Miguel de Dios <miguel.dedios@artica.es>
+
 	* include/functions_filemanager.php: fix bug that the url content "//" in
 	cases for example install in root of www directory. Only fix in this part
 	of source code because the rest of sources run fine.
